# simplex-method

./: .gitignore  CMakeLists.txt  Makefile  Matrix.cpp  Matrix.hpp  README  README.md  TODO.md  Window.cpp  Window.hpp  _matrix  clean  compile  examples.txt  main.cpp
_MakeGen/: File.pm  Log.pm  Option.pm  Post.pl  _make_gen.pl
_MakeGen/plugins/highlight/: colorscheme.css  highlight.sh
_MakeGen/plugins/update/: update.sh
include/: clean
lib/: CMakeLists.txt  matrix_gen.pl  vector_gen
lib/lazyeval/: CMakeLists.txt  Evaluation.cpp  Evaluation.hpp  Operator.hpp  Operators.cpp  Operators.hpp  README.md  lztree.hpp
lib/lazyeval/test/: CMakeLists.txt  LZEvalTest.cpp  LZEvalTests.hpp  main.cpp  matrix.hpp
lib/matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  MatrixAlgorithms.cpp  MatrixAttributes.cpp  MatrixLineOperations.cpp  MatrixOperators.cpp  MatrixProperties.cpp  MatrixTransformations.cpp  SimplexMethod.cpp
lib/matrix/test/: CMakeLists.txt  MatrixAlgorithmsTest.cpp  MatrixAttributesTest.cpp  MatrixLineOpnsTest.cpp  MatrixPropertiesTest.cpp  MatrixTest.cpp  MatrixTransformationsTest.cpp  SimplexMethodTest.cpp
lib/tensor/: CMakeLists.txt  Tensor.cpp  Tensor.hpp  TensorAttributes.cpp  TensorIterators.cpp  TensorN.cpp  TensorN.hpp  TensorOperators.cpp  TensorScalar.cpp  TensorScalar.hpp  TensorTemplates.hpp  TensorTransformations.cpp  Types.hpp
lib/tensor/test/: CMakeLists.txt  TensorTest.cpp  TensorTests.hpp  main.cpp
lib/test/: CMakeLists.txt  MatrixAlgorithmsTest.cpp  MatrixOperatorsTest.cpp  MatrixTest.cpp  MatrixTests.hpp  VectorAlgorithmsTest.cpp  main.cpp
lib/ttensor/: TTensor.hpp  TTensor.hpp.gch
lib/vector/: .gitignore  CMakeLists.txt  Types.hpp  Vector.cpp  Vector.hpp  VectorAlgorithms.cpp  VectorAttributes.cpp  VectorFunctional.cpp  VectorOperators.cpp  VectorTransformations.cpp  swigify  vector_interface.i
lib/vector/test/: CMakeLists.txt  VectorAlgorithmsTest.cpp  VectorAttributesTest.cpp  VectorFunctionalTest.cpp  VectorOperators.cpp  VectorOperatorsTest.cpp  VectorTest.cpp  VectorTests.hpp  VectorTransformationsTest.cpp  main.cpp
src/: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.hpp  MatrixAlgorithms.cpp  MatrixLineOperations.cpp  MatrixOperators.cpp  MatrixProperties.cpp  MatrixTransformations.cpp  SimplexMethod.cpp  Types.hpp  clean.sh  main.cpp  matrix_gen.pl  simplex.cpp
src/matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  MatrixAlgorithms.cpp  SimplexMethod.cpp
src/sm_tests/: large1.txt  negative.txt
src/tests/: large2.txt  large3.txt  large4.txt  positive.txt
src/vector/: CMakeLists.txt  Vector.cpp  Vector.hpp  VectorOperators.cpp
test/: CMakeLists.txt  MatrixAlgorithmsTest.cpp  MatrixLineOpnsTest.cpp  MatrixOperatorsTest.cpp  MatrixPropertiesTest.cpp  MatrixTest.cpp  MatrixTests.hpp  MatrixTransformationsTest.cpp  SimplexMethodTest.cpp  VectorOperators.cpp  VectorTest.cpp  VectorTests.hpp  main.cpp
test/tests/: CMakeLists.txt  simplex.cpp
